Update Imageflow blurb

--- a/content/index.slim
+++ b/content/index.slim
@@ -23,9 +23,6 @@ h1 ASP.NET library and image server
           img src="/img/ir-logos/imageresizer_00AEC4_transparent.svg" alt="Imageresizer" width="200"
         p
           span.shield.gap
-            span.shield_k status
-            span.shield_v highly stable
-          span.shield.gap
             span.shield_k OS
             span.shield_v Windows Server
           span.shield.gap
@@ -80,7 +77,7 @@ h1 ASP.NET library and image server
           img src="https://img.shields.io/badge/components-combined server, client, and library-green.svg"
           |  
           img src="https://img.shields.io/badge/rendering engine-GDI+ (free) / custom (with Performance license)-green.svg"
-        p ImageResizer is the best image server for ASP.NET. It can be dropped into existing apps and works alongside your CMS or existing platform to eliminate manual image tasks, enable fast and adaptive websites, and improve your sales by reducing page load time. 
+        p ImageResizer is the best image server for ASP.NET Classic. It can be dropped into existing apps and works alongside your CMS or existing platform to eliminate manual image tasks, enable fast and adaptive websites, and improve your sales by reducing page load time. 
       .span6 style="text-align:center;"
         
         p
@@ -88,14 +85,11 @@ h1 ASP.NET library and image server
             img src="/img/imageflow.svg" alt="Imageflow" width="200"
         p
           span.shield.gap
-            span.shield_k status
-            span.shield_v technical preview
-          span.shield.gap
             span.shield_k OS
             span.shield_v Windows, Linux, Mac
           span.shield.gap
             span.shield_k embeddable by
-            span.shield_v all C compatible languages
+            span.shield_v all languages
           span.shield.gap
             span.shield_k REST APIs
             span.shield_v JSON API, Querystring API
@@ -116,7 +110,7 @@ h1 ASP.NET library and image server
             span.shield_v correct
           span.shield.gap
             span.shield_k built with
-            span.shield_v Rust, C11, C++
+            span.shield_v Rust, C11
           span.shield.gap
             span.shield_k rendering engine
             span.shield_v custom
@@ -146,11 +140,12 @@ h1 ASP.NET library and image server
           |  
           img src="https://img.shields.io/badge/rendering engine-custom-green.svg"
         markdown: 
-          [Imageflow](https://www.imageflow.io) is in development, but you can [download a working preview](https://github.com/imazen/imageflow/releases) and give us feedback. 
+          [Imageflow](https://www.imageflow.io) is our next-generation product.  
           
-          * *libimageflow.dll* makes a [cross-platform ImageResizer library possible](http://www.imageflow.io/imageresizer/).
-          * *imageflow_server* is a RESTful image server and faster ImageResizer replacement. 
-          * *imageflow_tool* is perfect for batch processing - up to 17x faster than ImageMagick. 
+          * [Imageflow.NET Server](https://github.com/imazen/imageflow-dotnet-server) supports .NET Core and offers largely the same functionality as ImageResizer,
+          except it is much faster, produces higher quality images, and compresses images better.
+          * [Imageflow.NET](https://github.com/imazen/imageflow-dotnet) is a fluent API for manipulating images on .NET Standard 2.0.
+          * [imageflow_tool](https://github.com/imazen/imageflow/releases) is perfect for batch processing - up to 17x faster than ImageMagick. 
 
   
 
