--- a/content/index.slim
+++ b/content/index.slim
@@ -19,67 +19,6 @@ h1 ASP.NET library and image server
   .container
     .row-fluid
       .span6 style="text-align:center;"
-        p 
-          img src="/img/ir-logos/imageresizer_00AEC4_transparent.svg" alt="Imageresizer" width="200"
-        p
-          span.shield.gap
-            span.shield_k OS
-            span.shield_v Windows Server
-          span.shield.gap
-            span.shield_k embeddable by
-            span.shield_v C#/F#/VB.NET except .NET Core
-          span.shield.gap
-            span.shield_k REST APIs
-            span.shield_v Querystring API
-          span.shield.gap
-            span.shield_k web server
-            span.shield_v IIS
-          span.shield.gap
-            span.shield_k codecs
-            span.shield_v Windows APIs
-          span.shield.gap
-            span.shield_k file sizes
-            span.shield_v decent
-          span.shield.gap
-            span.shield_k performance
-            span.shield_v good
-          span.shield.gap
-            span.shield_k color profiles
-            span.shield_v limited by windows
-          span.shield.gap
-            span.shield_k built with
-            span.shield_v C#, F#, C++/CLI, C89
-          span.shield.gap
-            span.shield_k rendering engine
-            span.shield_v GDI+ (free) / custom (with Performance license)
-        /
-          
-          img src="https://img.shields.io/badge/status-highly%20stable-green.svg"
-          |  
-          img src="https://img.shields.io/badge/OS-Windows%20Server-green.svg"
-          |   
-          img src="https://img.shields.io/badge/embeddable by-C%23%2FF%23%2FVB.NET except .NET Core-green.svg"
-          |  
-          img src="https://img.shields.io/badge/REST APIs-Querystring API-green.svg"
-          |  
-          img src="https://img.shields.io/badge/web server-IIS-green.svg"
-          |  
-          img src="https://img.shields.io/badge/codecs-Windows APIs-green.svg"
-          |  
-          img src="https://img.shields.io/badge/file sizes-decent-green.svg"
-          |  
-          img src="https://img.shields.io/badge/performance-good-green.svg"
-          |  
-          img src="https://img.shields.io/badge/color profiles-limited by Windows-green.svg"
-          |  
-          img src="https://img.shields.io/badge/built with-C%23,F%23,C++/CLI,C89-green.svg"
-          |  
-          img src="https://img.shields.io/badge/components-combined server, client, and library-green.svg"
-          |  
-          img src="https://img.shields.io/badge/rendering engine-GDI+ (free) / custom (with Performance license)-green.svg"
-        p ImageResizer is the best image server for ASP.NET Classic. It can be dropped into existing apps and works alongside your CMS or existing platform to eliminate manual image tasks, enable fast and adaptive websites, and improve your sales by reducing page load time. 
-      .span6 style="text-align:center;"
-        
         p
           a href="https://www.imageflow.io"
             img src="/img/imageflow.svg" alt="Imageflow" width="200"
@@ -140,12 +79,72 @@ h1 ASP.NET library and image server
           |  
           img src="https://img.shields.io/badge/rendering engine-custom-green.svg"
         markdown: 
-          [Imageflow](https://www.imageflow.io) is our next-generation product.  
+          [Imageflow](https://www.imageflow.io) offers cutting-edge image optimization and highest-quality image manipulation for all platforms.  
           
-          * [**Imageflow.NET Server**](https://github.com/imazen/imageflow-dotnet-server) supports .NET Core and offers largely the same functionality as ImageResizer,
-          except it is much faster, produces higher quality images, and compresses images better.
-          * [Imageflow.NET](https://github.com/imazen/imageflow-dotnet) is a fluent API for manipulating images on .NET Standard 2.0.
+          * [**Imageflow.NET Server**](https://github.com/imazen/imageflow-dotnet-server) is the **easiest and best image server for .NET 5, 6, and .NET Core**.
+          * [Imageflow.NET](https://github.com/imazen/imageflow-dotnet) is a fluent API for manipulating images on .NET Standard 2.0 (Which includes 4.6.1, 5, 6, and Core 2+).
           * [imageflow_tool](https://github.com/imazen/imageflow/releases) is perfect for batch processing - up to 17x faster than ImageMagick. 
+
+      .span6 style="text-align:center;"
+        p 
+          img src="/img/ir-logos/imageresizer_00AEC4_transparent.svg" alt="Imageresizer" width="200"
+        p
+          span.shield.gap
+            span.shield_k OS
+            span.shield_v Windows Server
+          span.shield.gap
+            span.shield_k embeddable by
+            span.shield_v C#/F#/VB.NET except .NET Core
+          span.shield.gap
+            span.shield_k REST APIs
+            span.shield_v Querystring API
+          span.shield.gap
+            span.shield_k web server
+            span.shield_v IIS
+          span.shield.gap
+            span.shield_k codecs
+            span.shield_v Windows APIs
+          span.shield.gap
+            span.shield_k file sizes
+            span.shield_v decent
+          span.shield.gap
+            span.shield_k performance
+            span.shield_v good
+          span.shield.gap
+            span.shield_k color profiles
+            span.shield_v limited by windows
+          span.shield.gap
+            span.shield_k built with
+            span.shield_v C#, F#, C++/CLI, C89
+          span.shield.gap
+            span.shield_k rendering engine
+            span.shield_v GDI+ (free) / custom (with Performance license)
+        /
+          
+          img src="https://img.shields.io/badge/status-highly%20stable-green.svg"
+          |  
+          img src="https://img.shields.io/badge/OS-Windows%20Server-green.svg"
+          |   
+          img src="https://img.shields.io/badge/embeddable by-C%23%2FF%23%2FVB.NET except .NET Core-green.svg"
+          |  
+          img src="https://img.shields.io/badge/REST APIs-Querystring API-green.svg"
+          |  
+          img src="https://img.shields.io/badge/web server-IIS-green.svg"
+          |  
+          img src="https://img.shields.io/badge/codecs-Windows APIs-green.svg"
+          |  
+          img src="https://img.shields.io/badge/file sizes-decent-green.svg"
+          |  
+          img src="https://img.shields.io/badge/performance-good-green.svg"
+          |  
+          img src="https://img.shields.io/badge/color profiles-limited by Windows-green.svg"
+          |  
+          img src="https://img.shields.io/badge/built with-C%23,F%23,C++/CLI,C89-green.svg"
+          |  
+          img src="https://img.shields.io/badge/components-combined server, client, and library-green.svg"
+          |  
+          img src="https://img.shields.io/badge/rendering engine-GDI+ (free) / custom (with Performance license)-green.svg"
+        p ImageResizer is the easiest and best image server for ASP.NET. It can be dropped into existing apps and works alongside your CMS or existing platform to eliminate manual image tasks, enable fast and adaptive websites, and improve your sales by reducing page load time. 
 
   
 
