--- a/content/index.slim
+++ b/content/index.slim
@@ -14,7 +14,7 @@ h1 ASP.NET library and image server
         .span12 style="text-align:center;"
           h2 style="color:white"
             a href="/pricing" style="color:white"
-              | Get Imageflow for free with a new ImageResizer subcription.
+              | Imageflow and ImageResizer Performance are offered as a bundle for no extra cost.
           
   .container
     .row-fluid
@@ -226,7 +226,7 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
         a.block.statsbar href="https://www.nuget.org/profiles/imazen/"
           p
             i.icon-white.icon-cloud-download.statsnumber
-             |  2,763,726
+             |  4,133,652
           p
             |NuGet downloads of ImageResizer
           .clear
@@ -244,13 +244,13 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
             i.icon-white.icon-github.statsnumber  
               |  2,550
           p
-            |Commits on Github. 250+ myget releases.
+            |Commits on Github. 250+ releases.
           .clear
       .span3
         a.block.statsbar href="https://stackoverflow.com/questions/tagged/imageresizer?sort=votes&pageSize=50"
           p
             i.icon-white.icon-question-sign.statsnumber
-             |  550+
+             |  570+
           p
             | Answers on StackOverflow
           .clear
@@ -261,9 +261,12 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
     |Create images that impress and inspire
   .container
     .span6.home3.hide_video
-      .youtube-player data-id="GEA3uduWylk"
-      /
-        iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk?rel=0"
+      p style= "margin-left: 60px; margin-right:30px"
+        |Imageflow provides unparalleled image quality and reduced file sizes. Each command is carefully optimized for excellent image quality and extreme performance. Resize, tune, crop, auto-trim whitespace, and watermark images in milliseconds. Optimize development agility *and* runtime performance.
+        . Have your server deliver final images to the browser in milliseconds.
+      p style= "margin-left: 60px; margin-right:30px"
+        |Get started with Imageflow.NET Server
+        a href="https://github.com/imazen/imageflow-dotnet-server" Imageflow.NET Server 
     .span6
       p style= "margin-left: 60px; margin-right:30px"
         |ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
@@ -288,7 +291,7 @@ hr
               i.ico-white.circle-color-full.ico-link
               h3 Compatible and Standardized
               p.sidespace
-                |ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your platform, your software. See how ImageResizer can connect with your business
+                |ImageResizer and Imageflow were designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your platform, your software.
               .clear
         .span6
           a.block.plaintext href="/benefits/performant"
@@ -296,7 +299,7 @@ hr
               i.ico-white.circle-color-full.ico-stats
               h3 High Performance
               p.sidespace.home3
-                |Upgrade to the Performance Edition and scale to millions of images and users. We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
+                |Upgrade to Imageflow or ImageResizer Performance Edition and scale to millions of images and users. We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
               .clear
     .row-fluid
       .span6
@@ -313,14 +316,14 @@ hr
             i.ico-white.circle-color-full.ico-group
             h3 Open Source
             p.sidespace.home3
-              |Core functionality is free and open source under the freedom license. Everything we offer includes source code and permits modification. 
+              |ImageResizer core functionality is free and open source under the freedom license. Everything we offer includes source code and permits modification. 
               strong We reward pull requests.
             .clear
   .container.home3
     h1.headerpadding
       | Don't Believe Us?
     p.sidespace
-      |ImageResizer is trusted by small businesses and Fortune 500 companies alike. We're proud to let our customer satisfaction and our product speak for themselves.
+      |ImageResizer and Imageflow are trusted by small businesses and Fortune 500 companies alike. We're proud to let our customer satisfaction and our product speak for themselves.
     .row
       .span3
         a.block.plaintext.color href="/benefits/customers"
@@ -333,7 +336,7 @@ hr
           img alt="" src="https://z.zr.io/rw/sampleimages/tutorials2.png?width=250"
           h3 Tutorials
           p
-            |Either watch a screencast or read a page to see ImageResizer in action.
+            |See ImageResizer in action.
       .span3
         a.block.plaintext.color href="/benefits/testimonials"
           img alt="" src="https://z.zr.io/rw/sampleimages/testimonials.png?width=250"
@@ -345,7 +348,7 @@ hr
           img alt="" src="https://z.zr.io/rw/sampleimages/cropped-community.jpg?width=250"
           h3 Community
           p
-            |We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
+            |We never stop working to make Imageflow and ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
   
   / 
     .oddhomepageitem
