--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -18,7 +18,7 @@ html(lang="en" class="no-js")
     - if config.author.google_profile
       link rel="me" type="text/html" href=config.author.google_profile
 
-    meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
+    meta name="viewport" content="width=device-width, initial-scale=1"
 
     == partial :gtm
 
