Add meta description and srcset.tips link

--- a/content/index.slim
+++ b/content/index.slim
@@ -2,6 +2,7 @@ Menu: home
 Title: ImageResizer - High performance images for responsive sites
 Libs: uservoice, plusone, -comments, typed, -highlight
 Flags: unwrap
+Description: ImageResizer and Imageflow optimize and modify your app's images on-the-fly for phenomenal web performance and quick responsive development. Drop-in compatible with your existing apps and CMS - or deployable as a microservice. Improve your sales by reducing page load time.
 Layout: layout
 Icon: none
 
@@ -212,6 +213,11 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
       a href="https://github.com/imazen/imageflow-dotnet-server" class="btn btn-buynow" style="margin:6px"
         | Get Imageflow.NET Server for Windows/Linux/macOS
 
+      a href="https://srcset.tips" class="btn" style="margin:6px"
+        | Tips on using srcset and sizes to deliver the right image on your responsive website 
+
+
+        
 
         
 
