Purge all remaining uservoice links

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -74,7 +74,7 @@ Layout: false
           
 
         markdown:
-          We [encourage feedback and feature requests on our UserVoice site](http://resizer.uservoice.com/forums/108373-image-resizer), where others can vote on your proposals.
+          We encourage feedback and feature requests on the [Imageflow Server](https://github.com/imazen/imageflow-dotnet-server) or [ImageResizer Github page](https://github.com/imazen/resizer).
 
           *Please* reserve on-page comments for questions and clarifications *related to the current page*. The comments are *not* the appropriate place to ask for support or troubleshooting assistance.
 
