--- a/content/docs/v4/install/index.slim
+++ b/content/docs/v4/install/index.slim
@@ -94,4 +94,4 @@ markdown:
     
     3. Take a look at client-side components like [Slimmage.js](https://github.com/imazen/slimmage), which can make responsive images painless. There [are many third-party libraries that can make integration easier](/docs/community).
 
-    4. Join the community [on Github](https://github.com/imazen/resizer) or [on UserVoice](http://resizer.uservoice.com/forums/108373-image-resizer)
+    4. Join the community [on Github](https://github.com/imazen/resizer)
