--- a/content/index.slim
+++ b/content/index.slim
@@ -1,6 +1,6 @@
 Menu: home
 Title: ImageResizer - High performance images for responsive sites
-Libs: uservoice, plusone, -comments, typed, -highlight
+Libs: plusone, -comments, typed, -highlight
 Flags: unwrap
 Description: ImageResizer and Imageflow optimize and modify your app's images on-the-fly for phenomenal web performance and quick responsive development. Drop-in compatible with your existing apps and CMS - or deployable as a microservice. Improve your sales by reducing page load time.
 Layout: layout
