--- a/content/pricing/index.slim
+++ b/content/pricing/index.slim
@@ -1,6 +1,6 @@
 title: Pricing - Image Resizer
 Icon: notes
-Libs: -comments, uservoice, license
+Libs: -comments, license
 Aliases: /pricing /prices /buy /licenses
 
 h1 Select your company or organization size.
