--- a/content/pricing/per-server.slim
+++ b/content/pricing/per-server.slim
@@ -1,6 +1,6 @@
 title: Server Licenses - Image Resizer
 Icon: notes
-Libs: -comments, uservoice, license
+Libs: -comments, license
 Flags: unwrap
 Layout: layout
 Aliases: /licenses/server
