--- a/content/pricing/for.slim
+++ b/content/pricing/for.slim
@@ -1,6 +1,6 @@
 title: Pricing - Image Resizer
 Icon: notes
-Libs: -comments, uservoice, license
+Libs: -comments, license
 Flags: unwrap
 Layout: layout
 
